# yaideaig

./: .gitignore  CMakeLists.txt  Makefile  README.md  Untitled 1.odp
src/: attribut.cpp  attribut.hpp  classes.cpp  classes.hpp  example.cpp  example.hpp  main.cpp  readFile.cpp  readFile.hpp  trainingSet.cpp  trainingSet.hpp
